// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default 1. s2s-d-action-constants: 1. s2s-d-action-constants 1`] = `
"
export type Action = Increment

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
export const INCREMENT: \\"INCREMENT\\" = \\"INCREMENT\\";
"
`;

exports[`default 2. s2s-d-action-constants: 2. s2s-d-action-constants 1`] = `
"
// @flow
export type Action = Increment

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
export const INCREMENT: \\"INCREMENT\\" = \\"INCREMENT\\";
"
`;

exports[`default 3. s2s-d-action-constants: 3. s2s-d-action-constants 1`] = `
"
export type Action = Increment | Decrement

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
export const INCREMENT: \\"INCREMENT\\" = \\"INCREMENT\\";
export const DECREMENT: \\"DECREMENT\\" = \\"DECREMENT\\";
"
`;

exports[`default GenericTypeAnnotation: GenericTypeAnnotation 1`] = `
"
// @flow
import * as constants from './constants.js'

export type Action = string

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
"
`;

exports[`default default: default 1`] = `
"
// @flow
import * as constants from './constants.js'

export type Action = Increment

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
export const INCREMENT: 'INCREMENT' = 'INCREMENT';
"
`;

exports[`default import type: import type 1`] = `
"
import type { UserID } from './types.js'

export type FetchUser = {
  type: typeof FETCH_USER,
  id: UserID
};

export type Action = FetchUser;

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
export const FETCH_USER: 'FETCH_USER' = 'FETCH_USER';
"
`;

exports[`default imports: imports 1`] = `
"
// @flow
import type { X } from './types';

export type Action = Increment

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
export const INCREMENT: 'INCREMENT' = 'INCREMENT';
"
`;

exports[`default snake_case: snake_case 1`] = `
"
export type Action = ThisIsAction;

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
export const THIS_IS_ACTION: \\"THIS_IS_ACTION\\" = \\"THIS_IS_ACTION\\";
"
`;
